--- a/ANALISIS_02_MORAN_DANIEL.ipynb
+++ b/ANALISIS_02_MORAN_DANIEL.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# <center><b>Reporte - 02:</b> <span style='color:Red'> <b>Synergy Logistics</b> </span> </center>\n",
     "##### <center>Hecho por: <b>Daniel Omar Morán Carrizal<b> </center>\n",
-    "##### <center> <b>marzo 2022<b> </center>"
+    "##### <center> <b>marzo 2022<b> </center>\n",
+    "##### <center>Link github: <span style='color:blue'> <b> https://github.com/danielmoraan/analisis-proyecto-02-sldb</b> </span> <center>"
    ]
   },
   {
